# rm_control

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  package.xml  rm_base_loader_plugins.xml  robot_state_plugin.xml  rosdep.yaml
config/: auto.yaml  (+11 more)
rm_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
rm_common/include/rm_common/: DebugDataPublisher.h  eigen_types.h  linear_interpolation.h  lqr.h  math_utilities.h  ori_tool.h  rls.h  ros_utilities.h  tf_rt_broadcaster.h  traj_gen.h
rm_common/src/: filters.cpp  lp_filter.cpp  ori_tool.cpp  tf_rt_broadcaster.cpp
rm_common/src/decision/: target_cost_function.cpp
rm_common/src/filter/: filters.cpp  imu_complementary_filter.cpp  imu_filter_base.cpp  lp_filter.cpp
rm_common/src/referee/: referee.cpp
rm_common/test/: LqrTest.cpp  test_kalman_filter.cpp  test_one_euro_filter.cpp  test_traj.cpp  unit_test_lqr.cpp
rm_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
rm_dbus/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
rm_dbus/config/: dbus.yaml
rm_dbus/include/dbus/: dbus_node.h
rm_dbus/include/rm_dbus/: dbus.h  dbus_node.h
rm_dbus/src/: dbus.cpp  dbus_node.cpp
rm_description/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
rm_description/launch/: check_joint.launch
rm_description/meshes/balance/: right_rubber_wheel.stl
rm_description/meshes/common/: left_front_swerve_pivot.stl  left_threaded_mecanum_wheel.stl  omni_roller.stl  omni_wheel.stl  right_threaded_mecanum_wheel.stl  roller.stl  swerve_pivot.stl
rm_description/meshes/engineer/: base.stl  card.stl  left_finger.stl  link2.stl  link5.stl  palm.stl  pitch.stl  right_finger.stl  right_finger_convex.stl
rm_description/meshes/hero/: base.stl  cover.stl  pitch.stl  yaw.stl
rm_description/meshes/rmua/: base.stl  friction.stl  pitch.stl  trigger.stl  yaw.stl
rm_description/meshes/sentry/: base_link.stl  drive_wheel.stl  driven_wheel.stl  driven_wheel1.stl  driven_wheel2.stl  driven_wheel3.stl  lower_trigger.stl  track.stl  upper_pitch.stl  upper_trigger.stl  upper_yaw.stl
rm_description/meshes/standard/: base.stl  pitch.stl  trigger.stl  yaw.stl
rm_description/urdf/auto/: auto.urdf.xacro
rm_description/urdf/balance/: balance.urdf.xacro  chassis.urdf.xacro  rubber_wheel.urdf.xacro
rm_description/urdf/common/: camera.urdf.xacro  friction.urdf.xacro  imu.urdf.xacro  lidar2d.urdf.xacro  mecanum_wheel.urdf.xacro  omni_wheel.urdf.xacro  realsense_l515.urdf.xacro  swerve_drive.urdf.xacro
rm_description/urdf/engineer/: arm.transmission.xacro  arm.urdf.xacro  chassis.urdf.xacro  hand.urdf.xacro  mast.urdf.xacro
rm_description/urdf/hero/: chassis.urdf.xacro  gimbal.transmission.urdf.xacro  gimbal.urdf.xacro  hero.urdf.xacro  shooter.transmission.urdf.xacro  shooter.urdf.xacro
rm_description/urdf/rmua/: chassis.urdf.xacro  friction.urdf.xacro  gimbal.transmission.urdf.xacro  gimbal.urdf.xacro  shooter.urdf.xacro
rm_description/urdf/sentry/: chassis.transmission.urdf.xacro  chassis.urdf.xacro  driven_wheel1.urdf.xacro  driven_wheel2.urdf.xacro  driven_wheel3.urdf.xacro  lower_gimbal.transmission.urdf.xacro  lower_gimbal.urdf.xacro  lower_shooter.transmission.urdf.xacro  lower_shooter.urdf.xacro  sentry.urdf.xacro  upper_gimbal.transmission.urdf.xacro  (+3 more)
rm_gazebo/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  rm_robot_hw_sim_plugins.xml
rm_gazebo/config/: imus.yaml  mimic_joint.yaml
rm_gazebo/launch/: big_resource.launch  empty_world.launch  exchange_station.launch  rmuc.launch  rmul2026.launch  sentry_world.launch  slope.launch  small_resource.launch  step.launch  step_down.launch  stone.launch  vmc_test.launch  warthog_race_world.launch
rm_gazebo/src/: rm_robot_hw_sim.cpp
rm_gazebo/worlds/: empty.world  rmuc.stl  rmuc.world  rmul2026.world  sentry.world  slope.world  step.world  step_down.world  stone.world
rm_hw/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  rm_hw_loader_plugins.xml
rm_hw/config/: actuator_coefficient.yaml  auto.yaml  balance.yaml  engineer.yaml  hero.yaml  hw_config_template.yaml  sentry.yaml  standard3.yaml  standard4.yaml  standard5.yaml
rm_hw/launch/: rm_hw.launch
rm_hw/src/: control_loop.cpp  rm_hw.cpp
rm_hw/test/: test_imu.launch  test_imu.yaml  test_motor.launch  test_motor.yaml
rm_infrastructure/: CHANGELOG.rst  CMakeLists.txt  package.xml
rm_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
rm_msgs/action/: Engineer.action  QueryGlobalLocalization.action
rm_msgs/msg/: ActuatorState.msg  BalanceState.msg  BulletSolverData.msg  BusState.msg  ChassisActiveSusCmd.msg  ChassisCmd.msg  CustomControllerData.msg  Dart.msg  DbusData.msg  DebugData.msg  ExchangerMsg.msg  GimbalCmd.msg  GimbalDesError.msg  GimbalPosState.msg  GpioData.msg  GpioRead.msg  GpioReadArray.msg  GpioWrite.msg  KalmanData.msg  LQRkMatrix.msg  LegCmd.msg  LeggedChassisMode.msg  LeggedChassisStatus.msg  LeggedLQRStatus.msg  LeggedUpstairStatus.msg  LocalHeatData.msg  LocalHeatState.msg  LpData.msg  MovingAverageData.msg  MultiDofCmd.msg  Referee.msg  ReversalCmd.msg  SentryData.msg  SentryDeviate.msg  SentryState.msg  ShootBeforehandCmd.msg  ShootCmd.msg  ShootState.msg  SuperCapacitor.msg  TagMsg.msg  (+6 more)
rm_msgs/srv/: CameraStatus.srv  ChangeVel.srv  CloseToTarget.srv  ContinousDetectorSwitch.srv  EnableGyro.srv  EnableGyroMoving.srv  EnableImuTrigger.srv  ExtraFrictionWheelSpeed.srv  ImuTriggerSwitch.srv  SetLimitVel.srv  ShooterSpeed.srv  StatusChange.srv
rm_referee/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
rm_referee/config/: hero.yaml  radar.yaml  standard3.yaml  standard4.yaml  standard5.yaml  template_referee.yaml
rm_referee/launch/: load.launch
rm_referee/src/: engineer_referee.cpp  hero_referee.cpp  main.cpp  radar_referee.cpp  referee.cpp  referee_base.cpp  referee_benchmark.cpp  robot_referee.cpp  standard_referee.cpp
rm_vt/: CMakeLists.txt  package.xml  review.md
rm_vt/launch/: load.launch
rm_vt/src/: main.cpp  video_tran.cpp  video_transmission.cpp  video_transmission_sender.cpp
(+538 files in other folders)
