<?xml version="1.0"?>
<package format="2">
    <name>rm_msgs</name>
    <version>1.0.1</version>
    <description>The rm_msgs package provides all the messages for all kind of robot</description>
    <maintainer email="liaoqiayuan@gmail.com">qiayuan</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>actionlib_msgs</build_depend>

    <exec_depend>std_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>actionlib</exec_depend>
    <exec_depend>actionlib_msgs</exec_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
