<?xml version="1.0"?>
<package format="2">
    <name>rm_hw</name>
    <version>0.1.8</version>
    <description>ROS control warped interface for RoboMaster motor and some robot hardware</description>
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>

    <license>BSD</license>
    <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>
    <!-- build_depend: dependencies only used in source files -->
    <!-- depend: build, export, and execution dependency -->
    <depend>roscpp</depend>
    <depend>roslint</depend>

    <depend>rm_common</depend>
    <depend>rm_msgs</depend>
    <depend>hardware_interface</depend>
    <depend>controller_interface</depend>
    <depend>transmission_interface</depend>
    <depend>joint_limits_interface</depend>
    <depend>controller_manager</depend>
    <depend>urdf</depend>
    <depend>realtime_tools</depend>

    <export>
        <transmission_interface plugin="${prefix}/rm_hw_loader_plugins.xml"/>
    </export>
</package>
