<?xml version="1.0"?>
<package format="2">
  <name>rm_infrastructure</name>
  <version>1.0.36</version>
  <description>Meta package that contains infrastructure package of rm_controls.</description>
  <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/rm-controls/rm_infrastruct</url>
  <url type="bugtracker">https://github.com/rm-controls/rm_infrastruct/issues</url>

  <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rm_msgs</exec_depend>
  <exec_depend>rm_common</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
