cmake_minimum_required(VERSION 3.10)
project(rm_msgs)

find_package(catkin REQUIRED COMPONENTS
        message_generation
        std_msgs
        geometry_msgs
        actionlib
        actionlib_msgs
)

add_message_files(
        FILES
        ActuatorState.msg
        BalanceState.msg
        BulletSolverData.msg
        BusState.msg
        DbusData.msg
        Dart.msg
        ExchangerMsg.msg
        ChassisActiveSusCmd.msg
        ChassisCmd.msg
        ShootCmd.msg
        ShootState.msg
        ShootBeforehandCmd.msg
        GimbalCmd.msg
        GimbalDesError.msg
        GimbalPosState.msg
        LegCmd.msg
        LeggedChassisMode.msg
        LeggedChassisStatus.msg
        LeggedUpstairStatus.msg
        LeggedLQRStatus.msg
        LQRkMatrix.msg
        LpData.msg
        LocalHeatData.msg
        LocalHeatState.msg
        KalmanData.msg
        MovingAverageData.msg
        GpioData.msg
        TofRadarData.msg
        MultiDofCmd.msg
        TagMsg.msg
        TagMsgArray.msg
        SentryDeviate.msg
        CustomControllerData.msg
        VTKeyboardMouseData.msg
        VTReceiverControlData.msg
        VideoPacket.msg
)

add_service_files(
        FILES
        ContinousDetectorSwitch.srv
        StatusChange.srv
        SetLimitVel.srv
        CameraStatus.srv
        EnableImuTrigger.srv
        EnableGyro.srv
        ExtraFrictionWheelSpeed.srv
        ShooterSpeed.srv
)

add_message_files(
        DIRECTORY msg/detection
        FILES
        PriorityArray.msg
        TargetDetection.msg
        TargetDetectionArray.msg
        TrackData.msg
)

add_message_files(
        DIRECTORY msg/referee
        FILES
        CapacityData.msg
        GameRobotStatus.msg
        GameStatus.msg
        StateCmd.msg
        EngineerUi.msg
        GameRobotHp.msg
        PowerHeatData.msg
        EventData.msg
        DartStatus.msg
        IcraBuffDebuffZoneStatus.msg
        SupplyProjectileAction.msg
        DartInfo.msg
        RobotHurt.msg
        SentryAttackingTarget.msg
        ShootData.msg
        BulletAllowance.msg
        RfidStatus.msg
        DartClientCmd.msg
        DartRemainingTime.msg
        ManualToReferee.msg
        RadarData.msg
        RadarCmd.msg
        RadarMarkData.msg
        RobotsPositionData.msg
        ClientMapSendData.msg
        ClientMapReceiveData.msg
        MapSentryData.msg
        GameRobotPosData.msg
        EnemyHpInfo.msg
        SentryInfo.msg
        RadarInfo.msg
        Buff.msg
        RadarToSentry.msg
        SentryCmd.msg
        RadarWirelessEnemyCallSign.msg
        RadarWirelessEnemyCoinAndFieldStatus.msg
        RadarWirelessEnemyProjectileAllowance.msg
        RadarWirelessEnemyRobotBuff.msg
        RadarWirelessEnemyRobotHp.msg
        RadarWirelessEnemyRobotPos.msg
        CustomClientCmdData.msg
        RobotCustomData.msg
        RobotCustomData2.msg
        VisualizeStateData.msg
        PowerManagementSampleAndStatusData.msg
        PowerManagementInitializationExceptionData.msg
        PowerManagementProcessStackOverflowData.msg
        PowerManagementSystemExceptionData.msg
        PowerManagementUnknownExceptionData.msg
)

add_action_files(
        FILES
        Engineer.action
)
# Generate added messages and services with any dependencies listed here
generate_messages(
        DEPENDENCIES
        std_msgs
        geometry_msgs
        actionlib_msgs
)

catkin_package(
        CATKIN_DEPENDS
        message_runtime
        std_msgs
        geometry_msgs
        actionlib
        actionlib_msgs
)
