<?xml version="1.0"?>
<package format="2">
    <name>rm_msgs</name>
    <version>0.1.8</version>
    <description>The rm_msgs package provides all the messages for all kind of robot</description>
    <maintainer email="liaoqiayuan@gmail.com">qiayuan</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>message_generation</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>actionlib</depend>
    <depend>actionlib_msgs</depend>

    <exec_depend>message_runtime</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
